--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -109,14 +109,14 @@ border: 2px solid rgb(130, 202, 250);
 }
 @media (max-width: 768px) {
     .imgname{
-        width:30%;
+        flex: 4;
     }
    .largescreen{
        display: none;
    }
-   .smallscreen{
+   .smallscreen, .largescreen{
     display: unset;
-    width: max-content;
+    flex: 4;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,7 +138,7 @@ border: 2px solid rgb(130, 202, 250);
    .togle{
     display: unset !important;
     display: flex;
-    width: 30%;
+    flex: 3;
     justify-content: right;  
    }
    
