--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,97 @@
-.App{
-  height: max-content;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+* {
+  box-sizing: border-box;
 }
+
 body {
-    margin: 0;
-    font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    font-variant: tabular-nums;
-    line-height: 1.5715;
-    background-color: #fff;
-    font-feature-settings: 'tnum';
+  font-family: "Poppins", sans-serif;
+  background-color: #fff;
+  margin: 0;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  margin-bottom: 0.5em;
-  font-weight: 500;
+
+a {
+  text-decoration: none;
+  text-transform: capitalize;
+}
+ul {
+  list-style-type: none;
+}
+li {
+  list-style: none;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+
+  margin: auto;
+}
+
+.mb{
+  margin-bottom: 10vh;
+}
+.mb4{
+margin-bottom: 4vh;
+}
+.pud4{
+  padding: 4vh 0px;
+}
+.mt{
+  margin-top: 5vh;
+}
+.mt4{
+  margin-top: 4vh;
+}
+
+.boxshadow1{
+  box-shadow:rgba(50, 50, 93, 0.9) 0px 2px
+   5px -1px, rgba(0, 0, 0, 0.4) 0px 1px 3px -1px;
+   border: 1px solid rgba(48, 47, 47, 0.2)
+}
+.boxshadow2 {
+  box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
+}
+
+.boxshadow3{
+  box-shadow: 2px 4px 6px 2px rgba(0,0,0,0.5);
+-webkit-box-shadow: 2px 4px 6px 2px rgba(0,0,0,0.39);
+-moz-box-shadow: 2px 4px 6px 2px rgba(0,0,0,0.39);
+}
+
+.d_flex {
+  display: flex;
+ 
+  justify-content: space-between;
+}
+.c_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.btn2{
+border: 2px solid #0a265c ;
+color: black;
+font-weight: 600;
+font-size: 1rem;
+border-radius: 5px;
+padding: 8px 15px;
+letter-spacing: 1px;
+cursor: pointer;
+background-color: rgb(130, 202, 250);
+} 
+.btn3{
+  border: 2px solid black ;
+  background-color: #0a265c;
+  width: max-content;
+  color: white;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 5px;
+  padding: 8px 15px;
+  letter-spacing: 1px;
+  cursor: pointer;
+ align-self: center;
 }
