--- a/src/pages/home/screen/screen.css
+++ b/src/pages/home/screen/screen.css
@@ -124,36 +124,44 @@
     }
 }
 @media (max-width: 576px) {
+    .screen{
+        position:unset;
+        
+        height: max-content !important;
+        
+    }
     .screen .form>p{
         font-size: calc(0.6rem + 1vw);
     }
     .screen .formm>li{
         color: white;
-        
+
         list-style:circle;
         font-size: calc(0.5rem + 1vw);
       }
-    .screen{
-        height: max-content !important;
-        min-height: 140vh;
-    }
+   
     .screen>img{
        display: none;
     }
     .screen .left {
+        padding-top: 4vh;
         background-color: black;
         height: max-content;
         width: 100%;
     }
+    .screen .ontop{
+        position:unset;
+        margin-bottom: 5vh;
+        display: flex;
+        flex-direction: column;
+        height: max-content !important;
+    }
     .screen .right{
-        height:max-content !important;
+        
         width: 100%;
         margin-top: 7.5vh;
     }
-    .screen .ontop{
-        display: flex;
-        flex-direction: column;
-    }
+   
 
      .screen .right>div{   
         width: 90%; 
