--- a/src/pages/home/testimonials/testimonial.css
+++ b/src/pages/home/testimonials/testimonial.css
@@ -37,6 +37,7 @@ height: 60vh;
     text-align: center;
     color: #0a265c;
     font-weight: 400;
+    font-size: calc(0.5rem + 1vw);
 }
   .slideshowSlider>div {
     display: inline-block;
@@ -80,10 +81,6 @@ height: 60vh;
   
   .slideshowDot.active >img {
     border: 5px solid #0a265c;
-   
-      margin-bottom: 1vh;
-   
-  
   }
 
   @media (max-width: 576px) {
