--- a/src/components/common/topbar/topbar.css
+++ b/src/components/common/topbar/topbar.css
@@ -118,9 +118,10 @@
     
 }
 
-.upss>.search>img{
+.upss>.search>.searchicon{
     margin-left: 2vh;
     margin-right: 2vw;
+    padding: 5px 5px;
     cursor: pointer;
     height: 5vh !important ;
     width:5vh!important;
