--- a/src/components/common/topbar/topbar.css
+++ b/src/components/common/topbar/topbar.css
@@ -138,7 +138,7 @@ display: none;
     cursor: pointer;
     margin-right: 3vw; 
     height: 6vh !important ;
-    width:8vh!important;
+    width:7vh!important;
     border-radius: 3px;
     color: white;
     border: 2px solid rgb(130, 202, 250);
@@ -248,7 +248,7 @@ display: none;
         height: 11vh;
        
     }
-    .togle>img{
+    .togle>.icon{
        
         cursor: pointer;
         height: 6vh !important ;
