--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,14 @@ body {
   background-color: #fff;
   margin: 0;
 }
-
+p{
+  white-space: initial;
+}
 a {
   text-decoration: none;
   text-transform: capitalize;
+  color: inherit;
+  text-align: inherit;
 }
 ul {
   list-style-type: none;
@@ -38,6 +42,10 @@ margin-bottom: 4vh;
 }
 .pud4{
   padding: 4vh 0px;
+}
+.listicon{
+  color:  #0a265c;
+margin-right: 5px;
 }
 .mt{
   margin-top: 5vh;
@@ -71,6 +79,13 @@ margin-bottom: 4vh;
   justify-content: space-between;
   align-items: center;
 }
+.flexwrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+ 
+}
 .btn2{
 border: 2px solid #0a265c ;
 color: black;
@@ -95,3 +110,4 @@ background-color: rgb(130, 202, 250);
   cursor: pointer;
  align-self: center;
 }
+
