--- a/src/pages/aboutus/aboutus.css
+++ b/src/pages/aboutus/aboutus.css
@@ -3,6 +3,19 @@
     width: 86%;
     margin: auto;
   }
+  .about .moreabout {
+    width: 86%;
+    margin: auto;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: space-between;
+  }
+  .about .moreabout h2{
+    color: #0a265c;
+  }
+  .about .moreabout .cont{
+   margin-top: 5vh;
+  }
   .about .heading {
  
     justify-content: left;
@@ -33,15 +46,67 @@
     width: 100%;
     height: 80%;
   }
+  .about .dy{
+width: 65%;
+  }
+
+  .about .dx{
+    width: 30%;
+      }
+.about .aboutimg{
+  width: 25vh;
+  height: 25vh;
+  margin-right: 5vh;
+}
+
+
+
+
+
+  
   @media screen and (max-width: 768px) {
     .about .flexi {
-      flex-direction: column;
-    }
+     flex-direction: column;
+   }
     .about p {
-      padding: 0;
-    }
-    .about .container img {
-      margin-top: 50px;
-    }
-  }
+     padding: 0;
+   }
+     .about .container img {
+     margin-top: 50px;
+   }
+    .about .dy .cont{
+       display: flex;
+       flex-direction: column;
+       align-items: flex-start;
+   }
+    .about .dy .cont2{
+       display: flex;
+       flex-direction: column-reverse;
+       
+   }
+    .about   .aboutimg{
+       width: 20vh;
+       height: 20vh;
+       margin-left: 0vh;
+     }
+ }
+
+ @media screen and (max-width: 576px) {
+ .about .moreabout{
+flex-direction: column;
+}
+ .about .dy{
+   width: 100%;
+     }
+   
+       .about .dx{
+       width: 100%;
+         }
+          .about   .aboutimg{
+           width: 18vh;
+           height: 18vh;
+           margin-left: 0vh;
+         }
+ }
+ 
   
