--- a/src/components/reusable/back/back.css
+++ b/src/components/reusable/back/back.css
@@ -72,3 +72,134 @@
      
     }
   }
+
+
+
+  .back3 {
+    min-height: 60vh;
+    height: max-content;
+    position: relative;
+    overflow: hidden;
+  
+    /*
+    border-left:1.5vw solid transparent ;
+    border-right:1.5vw solid transparent ;
+    border-top: 15px solid #021134;
+    border-bottom-right-radius: 5% 20% ;*/
+    
+  }
+  .back3 img {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    object-fit: cover;
+    margin-top: -10vh;
+    -webkit-transform: skewY(-4deg);
+    transform:skewY(-4deg);
+ 
+  }
+  .back3::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(17, 40, 72, 0.629);
+    z-index: -1;
+    margin-top: -10vh;
+    -webkit-transform: skewY(-4deg);
+    transform:skewY(-4deg); 
+
+     
+  }
+ 
+  .back3 .container {
+    color: #fff;
+    padding: 5vh 0;
+   
+    height: max-content;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .back3 h1 {
+    font-size: 2rem;
+    font-weight: 500;
+    color: white;
+    font-weight: 600;
+    margin: 0;
+    padding: 2vh 0px;
+  
+  }
+  .back3 .rii {
+   width: 30%;
+   background-color: #5cabff;
+   min-height: 60vh;
+   border-radius: 2vh;
+   border-bottom: 5px solid #0a265c; ;
+   border-right: 5px solid #0a265c;;
+   margin-bottom: -3vh;
+    
+   
+  }
+  .back3 .rii h4{
+    text-align: center;
+    padding: 1vh 2vh;
+    color:#ffff;
+ 
+  }
+  .back3 .assuarance{
+    background-color:white;
+    color: black;
+    width: 85%;
+    margin: auto;
+    border-radius: 1.5vh;
+  }
+  .back3 .assuarance li{
+    padding: 8px 5px;
+    border-bottom: 2px solid #5cabff;
+  }
+  .back3 .lee {
+    width: 60%;
+    
+   
+  }
+  .back3 span{
+    color:  rgb(130, 202, 250);
+    font-weight: 550;
+    font-size: 1.5rem;
+  }
+  .back3 .btn3{
+  margin-right: 2vh;
+  border: 2px solid #5cabff;
+  }
+  .back3 p{
+   margin-bottom: 5vh;
+    color:  rgb(130, 202, 250);
+    
+  }
+  @media (max-width: 768px) {
+    .back3 .rii {
+      width: 38%;
+    }
+    .back3 .lee {
+      width: 60%;
+      
+     
+    }
+  }
+  @media (max-width: 576px) {
+    .back3 .rii {
+      display: none;
+    }
+    .back3 .lee {
+      width: 100%;
+      
+     
+    }
+  }
