--- a/src/components/reusable/quicklinks/quicklinks.css
+++ b/src/components/reusable/quicklinks/quicklinks.css
@@ -20,4 +20,8 @@
     border-bottom: 1px solid rgb(135, 132, 132);
    cursor: pointer;
     padding: 5px 5px;
+    color: black;
+}
+.quicklinks li:hover{
+    background-color: #5cabff; ;
 }
