--- a/src/components/common/topbar/topbar.css
+++ b/src/components/common/topbar/topbar.css
@@ -6,12 +6,13 @@
     display: table;
   }
 .topbar{
-    
+    border: 1px solid white;
     width: 100%;
     height: 14vh;
+    
     display: flex;
     flex-direction: column;
-    z-index: 100;
+    z-index: 200;
     position: sticky !important;
     top: 0px;
     
@@ -200,13 +201,13 @@ align-items: flex-end;
      
         
         display: unset;
-        text-align: center;
-        background-color: white;
-        border-bottom: 4px solid #0a265c;
-        border-left: 3px solid #0a265c;
-        border-right: 3px solid #0a265c;
+        
+        background-color:rgb(130, 202, 250);
+       
+        border: 1px solid white;
         animation: shows 0.4s ease-in-out ; 
-        z-index: 100;
+        
+        z-index: 77;
     }
 
     @keyframes shows {
@@ -220,10 +221,13 @@ align-items: flex-end;
     }
       
     .topbar>.downs>li{
-       font-weight: 500;
-        padding: 9px 15vw;
+       font-weight: 550;
+        padding: 7px 15vw;
         width: max-content;
         margin: auto;
+        font-size: calc(0.8rem + 1vw);
+      
+
         
     }
     .topbar>.downs>li:hover{
